SERVER-35951 Fix to prevent race between repl set unfreeze and _startElectSelfIfEligibleV1 (election timeout) for pv1 single node replica set case.

(cherry picked from commit 32bd1c03753a5cd349841eea0d5541e1f3f1305d)