src/mongo/db/repl/topology_coordinator.cpp
@@ -98,8 +98,8 @@ std::ostream& operator<<(std::ostream& os,
     switch (result) {
         case TopologyCoordinator::PrepareFreezeResponseResult::kNoAction:
             return os << "no action";
-        case TopologyCoordinator::PrepareFreezeResponseResult::kElectSelf:
-            return os << "elect self";
+        case TopologyCoordinator::PrepareFreezeResponseResult::kSingleNodeSelfElect:
+            return os << "single node self elect";
     }
     MONGO_UNREACHABLE;
 }
@@ -2225,13 +2225,15 @@ TopologyCoordinator::prepareFreezeResponse(Date_t now, int secs, BSONObjBuilder*
         log() << "'unfreezing'";
         response->append("info", "unfreezing");
 
+        if (_rsConfig.getProtocolVersion() == 1)
+            return PrepareFreezeResponseResult::kSingleNodeSelfElect;
         if (_isElectableNodeInSingleNodeReplicaSet()) {
             // If we are a one-node replica set, we're the one member,
             // we're electable, we're not in maintenance mode, and we are currently in followerMode
             // SECONDARY, we must transition to candidate now that our stepdown period
             // is no longer active, in leiu of heartbeats.
             _role = Role::kCandidate;
-            return PrepareFreezeResponseResult::kElectSelf;
+            return PrepareFreezeResponseResult::kSingleNodeSelfElect;
         }
     } else {
         if (secs == 1)
